[gd_scene load_steps=4 format=2]

[ext_resource path="res://Megaman.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 67.2372, 61.7191 )

[node name="Megaman" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TimerDisparo" type="Timer" parent="."]
wait_time = 0.2

[node name="TimerDisparoGrande" type="Timer" parent="."]

[connection signal="timeout" from="TimerDisparo" to="." method="_on_Disparo_timeout"]
[connection signal="timeout" from="TimerDisparoGrande" to="." method="_on_TimerDisparoGrande_timeout"]
